load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bigtable.go",
        "memcache.go",
        "mysql.go",
        "postgres.go",
        "redis.go",
        "spanner.go",
        "types.go",
    ],
    importpath = "github.com/gcp-services/lock/backends",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "@com_google_cloud_go_spanner//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["spanner_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_google_cloud_go_spanner//spannertest:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
