load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bigtable.go",
        "memcache.go",
        "mysql.go",
        "postgres.go",
        "redis.go",
        "spanner.go",
        "types.go",
    ],
    importpath = "github.com/gcp-services/lock/backends",
    visibility = ["//visibility:public"],
    deps = [
        "//storage:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_google_cloud_go_spanner//:go_default_library",
        "@com_google_cloud_go_spanner//admin/database/apiv1:go_default_library",
        "@go_googleapis//google/spanner/admin/database/v1:database_go_proto",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
