load("@golink//proto:proto.bzl", "go_proto_link")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "lock_proto",
    srcs = ["lock.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "lock_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gcp-services/lock/storage",
    proto = ":lock_proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "lockpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/gcp-services/lock/storage/lockpb",
    proto = ":lock_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":lock_go_proto"],
    importpath = "github.com/gcp-services/lock/storage",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "lockpb_go_proto_link",
    dep = ":lockpb_go_proto",
    version = "v1",
)

go_proto_link(
    name = "storage_go_proto_link",
    dep = ":storage_go_proto",
    version = "v1",
)
